update Italian localisation

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -272,3 +272,4 @@ PLEASE\ RESTART\ THE\ APPLICATION\ FOR\ THE\ LANGUAGE\ SELECTION\ TO\ BECOME\ VI
 PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Bitte w\u00e4hlen Sie eine Sprache
 SELECT\ LANGUAGE=Sprache ausw\u00e4hlen
 SYSTEM\ DEFAULT=Systemstandardeinstellung
+MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Si \u00e8 scelto di cambiare il modo di visualizzare i documenti dei metadati sull'albero.\nTutti i nodi attualmente caricati verranno salvati e ricaricati. Si desidera continuare?\n
