--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus_es.properties
@@ -267,3 +267,11 @@ IMPORT/EXPORT\ FAVOURITES=Importar/exportar favoritos
 FORCE\ TYPE\ CHECKING=Forzar chequeo de tipos
 SHOW\ LOG\ CONSOLE=Mostrar consola del registro
 LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=La consola del registro no est\u00e1 disponible cuando se ejecuta la versi\u00f3n web start
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Si se selecciona el \u00e1rbol del corpus, \u00e9ste seguir\u00e1 la estructura de los documentos CMDI sin combinar ni compactar nada
+LANGUAGE\ SELECTION=Selecci\u00f3n del idioma
+PLEASE\ RESTART\ THE\ APPLICATION\ FOR\ THE\ LANGUAGE\ SELECTION\ TO\ BECOME\ VISIBLE=Por favor reiniciar la aplicaci\u00f3n para que la selecci\u00f3n del idioma sea visible
+PLEASE\ SELECT\ YOUR\ PREFERRED\ LANGUAGE=Por favor seleccionar su idioma favorito
+SELECT\ LANGUAGE=Seleccionar el idioma
+MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Mostrar estructura XML verbatim en el \u00e1rbol para CMDI
+SYSTEM\ DEFAULT=Predeterminada del sistema
+MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=Se ha decidido cambiar la manera de mostrar los documentos de los metadatos en el \u00e1rbol.\nSe guardar\u00e1n y recargar\u00e1n todos los nodos cargados actualmente. \u00bfSe desea continuar?\n
