--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -55,7 +55,7 @@ ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil wi
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error saving configuration to {0}
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your ''Local Corpus'' could not be moved to the requested location.\nYou can cancel now and nothing will be changed, or you can change the working\ndirectory anyway.\nIf you continue, any corpus and session files in your ''Local Corpus'' will move\ninto your ''Working Directories'' tree and you will have to import them manually.\nDo you wish to change the working directory despite this?
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=The files in your 'Local Corpus' could not be moved to the requested location.\nYou can cancel now and nothing will be changed, or you can change the working\ndirectory anyway.\nIf you continue, any corpus and session files in your 'Local Corpus' will move\ninto your 'Working Directories' tree and you will have to import them manually.\nDo you wish to change the working directory despite this?
 ERROR\ SAVING\ CONFIGURATION=Error saving configuration
 #{0} is the filename the configuration should be written to
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Could not write new configuration to {0}
