--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_es.properties
@@ -55,7 +55,7 @@ ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil de
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Error al guardar la configuraci\u00f3n como
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=No se pudo mover los archivos contenidos en el ''Corpus local'' en la ubicaci\u00f3n requerida.\nSe puede anular la operaci\u00f3n (no habr\u00e1 ning\u00fan cambio), o modificar el directorio de trabajo.\nEn el segundo caso, los archivos corpus y los archivos sesi\u00f3n contenidos en el ''Corpus local'' \nse desplazar\u00e1n al \u00e1rbol ''Directorios de trabajo'' y deber\u00e1n importarse manualmente.\n\u00bfModificar de todas formas el directorio de trabajo?\n
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=No se pudo mover los archivos contenidos en el 'Corpus local' en la ubicaci\u00f3n requerida.\nSe puede anular la operaci\u00f3n (no habr\u00e1 ning\u00fan cambio), o modificar el directorio de trabajo.\nEn el segundo caso, los archivos corpus y los archivos sesi\u00f3n contenidos en el 'Corpus local' \nse desplazar\u00e1n al \u00e1rbol 'Directorios de trabajo' y deber\u00e1n importarse manualmente.\n\u00bfModificar de todas formas el directorio de trabajo?\n
 ERROR\ SAVING\ CONFIGURATION=Error al guardar la configuraci\u00f3n
 #{0} is the filename the configuration should be written to
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=No se pudo escribir la nueva configuraci\u00f3n en {0}
