--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services_it.properties
@@ -1,18 +1,18 @@
 THE\ METADATA\ FILE\ COULD\ NOT\ BE\ OPENED=Impossibile aprire i file di metadati
 CMDI\ SCHEMA\ LOCATION=Postazione schema CMDI
-COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.=Impossibile trovare l''URL dello schema, alcuni nodi non verranno visualizzati correttamente. 
+COULD\ NOT\ FIND\ THE\ SCHEMA\ URL,\ SOME\ NODES\ WILL\ NOT\ DISPLAY\ CORRECTLY.=Impossibile trovare l'URL dello schema, alcuni nodi non verranno visualizzati correttamente. 
 LOAD\ IMDI\ FILES=Carica file IMDI
 A\ DOM\ ID\ ATTRIBUTE\ HAS\ BEEN\ FOUND\ IN\ ONE\ OR\ MORE\ FILES,\ THESE\ FILES\ WILL\ NEED\ TO\ BE\ SAVED\ TO\ CORRECT\ THIS.=Un attributo DOM id \u00e8 stato trovato in uno o pi\u00f9 file, tali file dovranno essere salvati per correggere il problema.
 INSERT\ FROM\ TEMPLATE=Inserisci da modello
 ERROR\ READING\ TEMPLATE=Errore durante la lettura del modello
 ADD\ FROM\ TEMPLATE=Aggiungi da modello
-ERROR\ INSERTING\ CREATE\ DATE=Errore nell''inserimento della data di creazione
+ERROR\ INSERTING\ CREATE\ DATE=Errore nell'inserimento della data di creazione
 ADD\ RESOURCE=Aggiungi risorsa
 #{0} is the name of a newly added node, {1} is parent node for this node in the table. This string is used as the title of the table that appears after adding a new node. E.g. 'New Actor in Standard Session'
 NEW\ {0}\ IN\ {1}=Nuovo/a {0} in {1}
 #{0} is the name of the newly added top level node (e.g. Session). This string is used as the title of the table that appears after adding a new node. E.g. 'New Session'.
 NEW\ {0}=Nuovo/a {0}
-INSERT\ NODE\ ERROR=Errore nell''inserimento del nodo
+INSERT\ NODE\ ERROR=Errore nell'inserimento del nodo
 ADD\ NODE=Aggiungi nodo
 NEW\ RESOURCE\ IN\ %S=Nuova risorsa in {0}
 NEW\ RESOURCES\ IN\ %S=Nuove risorse in {0}
@@ -20,11 +20,11 @@ NEW\ RESOURCES\ IN\ %S=Nuove risorse in {0}
 THERE\ IS\ NO\ CONTROLLED\ VOCABULARY\ FOR\ EITHER\ WRITTEN\ RESOURCE\ OR\ MEDIA\ FILE\ THAT\ MATCH\ "{0}".=Non esiste nessun elenco di parole per le risorse scritte o i file multimediali che corrisponda a "{0}".
 THIS\ PROBABLY\ MEANS\ THAT\ THE\ FILE\ IS\ NOT\ ARCHIVABLE.\ HOWEVER,\ YOU\ CAN\ PROCEED\ BY\ MANUALLY\ SELECTING\ THE\ RESOURCE\ TYPE.=Il file potrebbe non essere archiviabile. Si pu\u00f2 comunque procedere selezionando manualmente il tipo di risorsa.
 DO\ YOU\ WANT\ TO\ PROCEED?=Si desidera continuare?
-WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=AVVISO: L''operazione non garantisce che i dati possano essere caricati sul server del corpus!
+WARNING\:\ DOING\ THIS\ WILL\ NOT\ GUARANTEE\ THAT\ YOUR\ DATA\ WILL\ BE\ UPLOADABLE\ TO\ THE\ CORPUS\ SERVER!=AVVISO: L'operazione non garantisce che i dati possano essere caricati sul server del corpus!
 ERROR\ READING\ VIA\ THE\ IMDI\ API=Errore nella lettura con IMDI API
-MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Sostituito manualmente (possibile incompatibili\u00e0 con l''archivio)
+MANUALLY\ OVERRIDDEN\ (MIGHT\ NOT\ BE\ COMPATIBLE\ WITH\ THE\ ARCHIVE)=Sostituito manualmente (possibile incompatibili\u00e0 con l'archivio)
 CANCEL=Annulla
-THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=Il type checker non riconosce il/i file selezionato/i, il che significa che non\n\u00e8/sono archiviabile/i. L''operazione ignorer\u00e0 il messaggio e permetter\u00e0 di \naggiungere il/i file (risorse multimediali o scritte) alla sessione, tuttavia potrebbe\nnon essere possibile importare il risultato di tale operazione nel server del corpus.
+THE\ TYPE\ CHECKER\ DOES\ NOT\ RECOGNISE\ THE\ SELECTED\ FILE(S)=Il type checker non riconosce il/i file selezionato/i, il che significa che non\n\u00e8/sono archiviabile/i. L'operazione ignorer\u00e0 il messaggio e permetter\u00e0 di \naggiungere il/i file (risorse multimediali o scritte) alla sessione, tuttavia potrebbe\nnon essere possibile importare il risultato di tale operazione nel server del corpus.
 OVERRIDE\ TYPE\ CHECKER\ DECISION=Ignora decisione del type checker
 ERROR\ READING\ ONE\ OF\ THE\ LINKS\ VIA\ THE\ IMDI\ API=Errore nella lettura di uno dei link con IMDI API
 GET\ LINKS=Ottieni link
@@ -47,7 +47,7 @@ FAILED\ TO\ REMOVE\ RESOURCE\ PROXY\ WITH\ ID\ {0}=Impossibile rimuovere il prox
 UNEXPECTED\ RELATION\ BETWEEN\ SOURCE\ AND\ TARGET\ PATHS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Relazione imprevista tra percorso di origine e di destinazione. Vedi log degli errori per maggiori dettagli.
 INSERT\ NODE=Inserisci nodo
 COULD\ NOT\ READ\ THE\ XML\ SCHEMA=Impossibile leggera lo schema XML
-ERROR\ INSERTING\ NODE=Errore durante l''inserimento del nodo
+ERROR\ INSERTING\ NODE=Errore durante l'inserimento del nodo
 NO\ TEMPLATE\ FOUND\ FOR=Nessun modello trovato per: {0}
 #{0} is the location of the current project, {1} is the location of the project to be switched to
 CHANGING\ YOUR\ CURRENT\ PROJECT\ FROM\ {0}\ TO\ {1}=Spostamento del progetto attuale da:\n{0}\na:\n{1}
@@ -55,14 +55,14 @@ ARBIL\ WILL\ NEED\ TO\ CLOSE\ ALL\ TABLES\ ONCE\ THE\ FILES\ ARE\ MOVED=Arbil do
 #{0} is the filename the configuration should be written to
 ERROR\ SAVING\ CONFIGURATION\ TO\ {0}=Errore nel salvataggio della configurazione in {0}
 #'Local Corpus' is a fixed name and should be the same as the resource string with the value 'Local Corpus' in the default language
-THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Non \u00e8 stato possibile spostare i file contenuti nel ''Corpus locale'' nella postazione richiesta.\n\u00c8 possibile annullare l''operazione ora (senza che venga effettuata alcuna modifica), o \nmodificare la cartella di lavoro.\nIn quest''ultimo caso, gli eventuali file corpus o file sessione presenti nel ''Corpus locale'' \nverranno spostati nell''albero ''Cartelle di lavoro'' e dovranno essere importati manualmente.\nSi desidera modificare comunque la cartella di lavoro?\n\n
+THE\ FILES\ IN\ YOUR\ 'LOCAL\ CORPUS'\ COULD\ NOT\ BE\ MOVED\ TO\ THE\ REQUESTED\ LOCATION=Non \u00e8 stato possibile spostare i file contenuti nel 'Corpus locale' nella postazione richiesta.\n\u00c8 possibile annullare l'operazione ora (senza che venga effettuata alcuna modifica), o \nmodificare la cartella di lavoro.\nIn quest'ultimo caso, gli eventuali file corpus o file sessione presenti nel 'Corpus locale' \nverranno spostati nell'albero 'Cartelle di lavoro' e dovranno essere importati manualmente.\nSi desidera modificare comunque la cartella di lavoro?\n\n
 ERROR\ SAVING\ CONFIGURATION=Errore nel salvataggio della configurazione
 #{0} is the filename the configuration should be written to
 COULD\ NOT\ WRITE\ NEW\ CONFIGURATION\ TO\ {0}=Impossibile scrivere la nuova configurazione in {0}
 COULD\ NOT\ WRITE\ TO\ STORAGE\ DIRECTORY.\ UPDATE\ CHECK\ FAILED!=Impossibile scrivere nella cartella di archiviazione. Controllo aggiornamenti non riuscito!
-THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Errore durante l''aggiornamento dell''applicazione.\nSelezionare sul sito internet il link di download ed eseguire l''aggiornamento.\n
-THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Nuova versione disponibile.\nSelezionare sul sito internet il link di download ed eseguire l''aggiornamento.
-THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Errore durante il riavvio dell''applicazione.\nL''aggiornamento sar\u00e0 reso effettivo al prossimo riavvio.\n
+THERE\ WAS\ AN\ ERROR\ UPDATING\ THE\ APPLICATION.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Errore durante l'aggiornamento dell'applicazione.\nSelezionare sul sito internet il link di download ed eseguire l'aggiornamento.\n
+THERE\ IS\ A\ NEW\ VERSION\ AVAILABLE.PLEASE\ GO\ TO\ THE\ WEBSITE\ AND\ UPDATE\ VIA\ THE\ DOWNLOAD\ LINK.=Nuova versione disponibile.\nSelezionare sul sito internet il link di download ed eseguire l'aggiornamento.
+THERE\ WAS\ AN\ ERROR\ RESTARTING\ THE\ APPLICATION.THE\ UPDATE\ WILL\ TAKE\ EFFECT\ NEXT\ TIME\ THE\ APPLICATION\ IS\ RESTARTED.=Errore durante il riavvio dell'applicazione.\nL'aggiornamento sar\u00e0 reso effettivo al prossimo riavvio.\n
 ERROR=Errore
 There\ is\ a\ new\ version\ available=Nuova verione disponibile\nAggiornare ora?
 #Journal is a 'logbook' that tracks all actions taken in Arbil
