--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -100,14 +100,14 @@ SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WA
 SETUP_CLARIN\ PROFILES=Clarin Profiles
 CANCEL\ WIZARD=Cancel wizard
 #tool tip for 'show' checkboxes in 'edit field views' dialogue
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides ''hide fields'')
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Show only checked fields (hides all others and overrides 'hide fields')
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Invalid width for column {0}
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Column width
 FIELD_VIEW_TABLE_HIDE=Hide
 FIELD_VIEW_TABLE_SHOW\ ONLY=Show Only
 FIELD_VIEW_TABLE_COLUMN\ NAME=Column Name
 #tool tip for 'hide' checkboxes in 'edit field views' dialogue
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Hide checked fields (only active when no ''show only'' selection is made) 
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Hide checked fields (only active when no 'show only' selection is made) 
 ARBIL\ LOG\ CONSOLE=Arbil log console
 #button text, imperative (stop search)
 SEARCH_STOP=stop
@@ -215,7 +215,7 @@ ADD\ PROFILE=Add Profile
 ENTER\ THE\ PROFILE\ URL=Enter the profile URL
 PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Add a profile URL to the list
 PROFILES_ADD\ URL=Add URL
-PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Profiles selected below will become available in the ''Add'' menu of the local corpus. By default, only selected profiles will be downloaded for offline use.
+PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Profiles selected below will become available in the 'Add' menu of the local corpus. By default, only selected profiles will be downloaded for offline use.
 ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Only load profiles selected for manual editing
 PROFILES_DOWNLOAD\ ALL\ PROFILES\ FOR\ OFFLINE\ USE\ (INCLUDING\ UNSELECTED\ PROFILES)=Download all profiles for offline use (including unselected profiles)
 PROFILES_DOWNLOAD\ ALL=Download all
@@ -336,7 +336,7 @@ NODES\ OF\ THIS\ TYPE\ CANNOT\ BE\ PASTED\ INTO\ AT\ THIS\ STAGE=Nodes of this t
 PASTED\ STRING\ IS\ NOT\ AND\ IMDI\ FILE=Pasted string is not an IMDI file
 THE\ TARGET\ FILE\ IS\ NOT\ IN\ THE\ CACHE=The target file is not in the cache
 CANNOT\ PASTE\ SESSION\ SUBNODES\ INTO\ A\ CORPUS=Cannot paste session subnodes into a corpus
-THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node''s file does not exist
+THE\ TARGET\ NODE'S\ FILE\ DOES\ NOT\ EXIST=The target node's file does not exist
 COPYING\ WITH\ UNSAVED\ CHANGES=Copying with unsaved changes
 SOME\ OF\ THE\ NODES\ TO\ BE\ COPIED\ CONTAIN\ UNSAVED\ CHANGES=Some of the nodes to be copied contain unsaved changes.\nUnless they are saved, these changes will not be present in the resulting nodes. Continue anyway?
 %D\ NODES\ COULD\ NOT\ BE\ DELETED\ BECAUSE\ THEY\ HAVE\ NO\ PARENT\n=%d nodes could not be deleted because they have no parent
