--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -25,7 +25,7 @@ THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Le po
 
 ADD\ DEFAULT\ REMOTE\ LOCATIONS=Aggiungi postazioni remote di default
 
-ADD\ TO\ TREE\ ROOT=Aggiungi alla radice dell''albero
+ADD\ TO\ TREE\ ROOT=Aggiungi alla radice dell'albero
 
 ADD\ REMOTE\ LOCATION=Aggiungi postazione remota
 
@@ -77,7 +77,7 @@ CLEAR\ CELL\ HIGHLIGHT=Rimuovi evidenziatura dalle celle
 
 HIGHLIGHT\ MATCHING\ CELLS=Evidenzia celle corrispondenti
 
-COPY\ CELL\ TO\ WHOLE\ COLUMN=Copia cella nell''intera colonna
+COPY\ CELL\ TO\ WHOLE\ COLUMN=Copia cella nell'intera colonna
 
 CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD=Impossibile copiare questo tipo di campo
 
@@ -141,7 +141,7 @@ SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
 
 TRACK\ TABLE\ SELECTION\ IN\ TREE=Segui selezione tabella su albero
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che tutti i file locali di metadati siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, sar\u00e0 evidenziato di rosso sull''albero.
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione verifica che tutti i file locali di metadati siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, sar\u00e0 evidenziato di rosso sull'albero.
 
 ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre conformit\u00e0 dei file locali di metadati con il formato XML 
 
@@ -151,11 +151,11 @@ THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHO
 
 CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=Verifica autorizzazioni per risorse remote
 
-WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Quando si aggiunge una nuova risorsa a una sessione il file viene copiato nella cache locale e non viene creato nessun collegamento alla sua postazione corrente. Questa opzione pu\u00f2 nettamente migliorare l''uso del disco se si usano file di grande formato.
+WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Quando si aggiunge una nuova risorsa a una sessione il file viene copiato nella cache locale e non viene creato nessun collegamento alla sua postazione corrente. Questa opzione pu\u00f2 nettamente migliorare l'uso del disco se si usano file di grande formato.
 
 COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copia nuove risorse nella cache 
 
-CHECK\ FOR\ NEW\ VERSION\ ON\ START=Verifica nuova versione durante l''esecuzione dell''applicazione
+CHECK\ FOR\ NEW\ VERSION\ ON\ START=Verifica nuova versione durante l'esecuzione dell'applicazione
 
 SHOW\ STATUS\ BAR=Mostra barra di stato
 
@@ -261,10 +261,10 @@ NO\ UPDATES\ FOUND,\ CURRENT\ VERSION\ IS\ {0}=Nessun aggiornamento trovato, la 
 DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Elimina {1} attributo/i "{0}" 
 DELETE\ {0}\ X\ {1}=Elimina {1} campo/i "{0}"
 REMOVE\ SELECTED\ NODES\ FROM\ PARENT=Elimina i nodi selezionati dal nodo padre
-JUMP\ TO\ IN\ TREE=Visualizza sull''albero
+JUMP\ TO\ IN\ TREE=Visualizza sull'albero
 SHOW\ CONTEXT=Mostra contesto
 SELECT\ MATCHING\ ROWS=Seleziona righe corrispondenti
-ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l''eliminazione dei campi, visualizza log degli errori nel menu Guida per maggiori informazioni.
+ERROR\ DELETING\ FIELDS,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Errore durante l'eliminazione dei campi, visualizza log degli errori nel menu Guida per maggiori informazioni.
 SHOW\ LOG\ CONSOLE=Mostra console del log
 LOG\ CONSOLE\ NOT\ AVAILABLE\ WEB\ START=La console del log non \u00e8 disponibile quando si utilizza la versione web start
 MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=Se selezionato, l'albero del corpus seguir\u00e0 la struttra dei documenti CMDI senza unire o compattare
