--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_es.properties
@@ -98,13 +98,13 @@ SETUP_NO\ PROFILES\ SELECTED=Ning\u00fan perfil seleccionado
 SETUP_YOU\ HAVE\ NOT\ YET\ SELECTED\ PROFILES\ TO\ USE.\ ARE\ YOU\ SURE\ YOU\ WANT\ TO\ CONTINUE?=Todav\u00eda no se ha seleccionado ning\u00fan perfil. \u00bfEst\u00e1 seguro de querer continuar?
 SETUP_CLARIN\ PROFILES=Perfiles Clarin
 CANCEL\ WIZARD=Cancelar asistente
-FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n todos los dem\u00e1s y se invalidar\u00e1 la opci\u00f3n ''ocultar campos'')
+FIELD_VIEW_TABLE_SHOW\ ONLY\ CHECKED\ FIELDS\ (HIDES\ ALL\ OTHERS\ AND\ OVERRIDES\ HIDE\ FIELDS)=Mostrar s\u00f3lo campos seleccionados (se ocultar\u00e1n todos los dem\u00e1s y se invalidar\u00e1 la opci\u00f3n 'ocultar campos')
 FIELD_VIEW_TABLE_INVALID\ WIDTH\ FOR\ COLUMN\ {0}=Ancho de la columna {0} no v\u00e1lido
 FIELD_VIEW_TABLE_COLUMN\ WIDTH=Ancho columna
 FIELD_VIEW_TABLE_HIDE=Ocultar
 FIELD_VIEW_TABLE_SHOW\ ONLY=Mostrar s\u00f3lo
 FIELD_VIEW_TABLE_COLUMN\ NAME=Nombre de columna
-FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo al seleccionar ''Mostrar s\u00f3lo'')
+FIELD_VIEW_TABLE_HIDE\ CHECKED\ FIELDS\ (ONLY\ ACTIVE\ WHEN\ NO\ 'SHOW\ ONLY'\ SELECTION\ IS\ MADE)=Ocultar campos seleccionados (opci\u00f3n activa s\u00f3lo al seleccionar 'Mostrar s\u00f3lo')
 ARBIL\ LOG\ CONSOLE=Consola del registro de Arbil
 SEARCH_STOP=detener
 SEARCHED\:\ {0}/{1}\ FOUND\:\ {2}=buscado: {0}/{1} encontrado {2}
@@ -202,7 +202,7 @@ ADD\ PROFILE=Agregar perfil
 ENTER\ THE\ PROFILE\ URL=Insertar el URL del perfil
 PROFILES_ADD\ A\ PROFILE\ URL\ TO\ THE\ LIST=Agregar un URL de perfil a la lista
 PROFILES_ADD\ URL=Agregar URL
-PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Los perfiles seleccionados aqu\u00ed abajo ser\u00e1n disponibles en el men\u00fa ''Agregar'' del corpus local. De manera predeterminada, s\u00f3lo los perfiles seleccionados se descargar\u00e1n para ser utilizados sin conexi\u00f3n. 
+PROFILES\ SELECTED\ BELOW\ WILL\ BECOME\ AVAILABLE\ IN\ THE\ 'ADD'\ MENU\ OF\ THE\ LOCAL\ CORPUS.\ BY\ DEFAULT,\ ONLY\ SELECTED\ PROFILES\ WILL\ BE\ DOWNLOADED\ FOR\ OFFLINE\ USE.=Los perfiles seleccionados aqu\u00ed abajo ser\u00e1n disponibles en el men\u00fa 'Agregar' del corpus local. De manera predeterminada, s\u00f3lo los perfiles seleccionados se descargar\u00e1n para ser utilizados sin conexi\u00f3n. 
 ONLY\ LOAD\ PROFILES\ SELECTED\ FOR\ MANUAL\ EDITING=Cargar s\u00f3lo los perfiles seleccionados para ser modificados manualmente
 PROFILES_DOWNLOAD\ ALL\ PROFILES\ FOR\ OFFLINE\ USE\ (INCLUDING\ UNSELECTED\ PROFILES)=Descargar todos los perfiles para que se utilicen sin conexi\u00f3n (incluso los perfiles sin seleccionar)
 PROFILES_DOWNLOAD\ ALL=Descargar todo
@@ -211,7 +211,7 @@ PROFILES_RELOAD\ SELECTION=Volver a cargar selecci\u00f3n
 DOWNLOAD\ THE\ LATEST\ CLARIN\ PROFILES=Descargar los perfiles CMDI m\u00e1s recientes
 TOTAL\ METADATA\ FILES\ FOUND\:\ =Archivos de metadatos encontrados en total:
 TOOLTIP_SCHEMA\ VALIDATION\ ERROR\ (CHECK\ XML\ CONFORMANCE\ FOR\ DETAILS)=Error en la validaci\u00f3n con el esquema (comprobar conformidad con XML para m\u00e1s detalles)
-TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponible en el men\u00fa de ''Favoritos''
+TOOLTIP_AVAILABLE\ IN\ THE\ FAVOURITES\ MENU=Disponible en el men\u00fa de 'Favoritos'
 TOOLTIP_UNSAVED\ CHANGES=Cambios sin guardar
 TOOLTIP_HISTORY\ OF\ CHANGES\ ARE\ AVAILABLE=Historial de cambios disponible
 TOOLTIP_FILE\ NOT\ FOUND=No se encontr\u00f3 el archivo
@@ -335,4 +335,4 @@ CANNOT\ SEARCH\ {0}\ BECAUSE\ IT\ DOES\ NOT\ HAVE\ AN\ ARCHIVE\ HANDLE=No se pue
 DELETE\ FROM\ PARENT=Eliminar de nodo primario
 <P><STRONG>I/O\ EXCEPTION\ WHILE\ READING\ HELP\ CONTENTS</STRONG></P>=<p><strong>excepci\u00f3n I/O al leer el contenido de la gu\u00eda</strong></p>
 XSDCHECKER=Chequeador de XSD
-LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo ''Descripci\u00f3n'' (IMDI)
+LANGUAGES\ TO\ DISPLAY\ IN\ THE\ FIELD\ LANGUAGE\ SELECT\ BOX\ FOR\ IMDI=Idiomas para poner en el men\u00fa desplegable del campo 'Descripci\u00f3n' (IMDI)
