--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Services.properties
@@ -72,3 +72,9 @@ FAILED\ TO\ SHOW\ THE\ REQUESTED\ PLUGIN=Failed to show the requested plugin.
 NO\ METHOD\ TO\ ACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=No method to activate this type of plugin yet.
 FAILED\ TO\ DEACTIVATE\ THE\ REQUESTED\ PLUGIN=Failed to deactivate the requested plugin.
 NO\ METHOD\ TO\ DEACTIVATE\ THIS\ TYPE\ OF\ PLUGIN\ YET=No method to deactivate this type of plugin yet.
+DOWNLOADING\ CURRENTLY\ LOADED\ VOCABULARIES=Downloading currently loaded vocabularies
+DOWNLOADED\:\ {0}\ FAILED\:\ {1}=downloaded: {0} failed: {1}
+DOWNLOADED\ {0}\ OUT\ OF\ THE\ {1}\ VOCABULARIES\ CURRENTLY\ IN\ USE\ YOU\ WILL\ NEED\ TO\ RESTART\ THE\ APPLICATION\ FOR\ THE\ NEW\ VOCABULARIES\ TO\ TAKE\ EFFECT=Downloaded {0} out of the {1} vocabularies currently in use.\nYou will need to restart the application for the new vocabularies to take effect.
+A\ CONTROLLED\ VOCABULARY\ COULD\ NOT\ BE\ READ\ SOME\ FIELDS\ MAY\ NOT\ SHOW\ ALL\ OPTIONS=A controlled vocabulary could not be read.\n{0}\nSome fields may not show all options.
+RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Re-download Current Vocabularies
+LOAD\ CONTROLLED\ VOCABULARY=Load Controlled Vocabulary
