--- a/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -297,3 +297,8 @@ MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ IN\ TREE=Show verbatim XML structure in 
 MENU\ OPTION\ VERBATIM\ XML\ STRUCTURE\ TOOLTIP=If selected, the corpus trees will follow the structure of CMDI documents without any merging or compacting\n
 #Confirmation dialogue after 'verbatim xml' option in options menu of the menu bar was chosen
 MENU\ SWITCH\ XML\ VERBATIM\ STRUCTURE\ CONFIRM=You chose to switch the way metadata documents are displayed in the tree.\nDoing so will cause a save and reload of all nodes currently loaded. Do you want to continue?
+MENU_INCREASE_FONT_SIZE=Larger font
+MENU_DECREASE_FONT_SIZE=Smaller font
+MENU_RESET_FONT_SIZE=Reset font size
+#View menu in the menu bar
+MENU_VIEW=View
